2010-06-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Daniel Bates.

        Make SheriffBot more chatty
        https://bugs.webkit.org/show_bug.cgi?id=40463

        People seem to like to talk to SheriffBot, so let's make him chat back.

        * Scripts/webkitpy/thirdparty/__init__.py:
        * Scripts/webkitpy/tool/bot/irc_command.py:
        * Scripts/webkitpy/tool/bot/irc_command_unittest.py: Added.
        * Scripts/webkitpy/tool/bot/sheriffircbot.py:
        * Scripts/webkitpy/tool/bot/sheriffircbot_unittest.py:

2010-06-10  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Darin Adler.

        Fix the Windows buildbot when WebKitAuxiliaryLibs.zip cannot be found on our server.
        
        Robustify update-webkit-auxiliary-libs to be able to handle the case when WebKitAuxiliaryLibs.zip doesn't exist,
        and allow the script to fall back to an existing file, only failing if there is no fallback file. Also switch to checking
        WEXITSTATUS on $result instead of just comparing $result to 0.

        * Scripts/update-webkit-auxiliary-libs:

2010-06-10  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Alexey Proskuryakov.

        don't use Exception.message as it's deprecated in python 2.6+
        https://bugs.webkit.org/show_bug.cgi?id=40449

        * Scripts/webkitpy/tool/commands/queues.py:

2010-06-10  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix handle_script_error in rietveld upload queue and add testing for handle_script_error
        https://bugs.webkit.org/show_bug.cgi?id=40436

        * Scripts/webkitpy/common/system/outputcapture.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        * Scripts/webkitpy/tool/commands/queuestest.py:
        * Scripts/webkitpy/tool/mocktool.py:
